# Bayer-AI-Hackathon

./: .env  ARCHITECTURE.md  CLEANUP_AND_OLLAMA_SUMMARY.md  GPU_FIX.md  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  LOG_ANALYSIS_README.md  README.md  SESSION_TRACKING_SUMMARY.md  SYSTEM_FLOW.md  baseline_stats.json  config.py  example_usage.py  graph.py  log_analyzer.py  main.py  metric_prompt.py  metrics_agent.py  mock_llm.py  pyproject.toml  remove_emojis.py  sample_logs.json  simulated_msg.json  state.py
APPS/: cpu_monitor.py  threaded_monitor.py
agents/: commander.py  deploy_agent.py  logs_agent.py  metrics_agent.py
core/: action.py  correlation.py  decision.py  logger.py  report.py
data/: logs.json  telemetry_stream.py
src/: ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  advanced_first_responder.py  autonomous_first_responder.py  integrations.py  requirements.txt  test_autonomous_responder.py
telemetry/: deploy_stream.py  detector.py  log_stream.py  metrics_stream.py
