[project]
name = "bayer-ai-hackathon"
version = "0.1.0"
description = "Autonomous Incident Commander - Bayer AI Hackathon 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=4.2.0",
    "python-dotenv>=1.2.1",
    "certifi>=2026.1.4",
]
